// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableView Call The Constructor and create table 1`] = `
"<table>
      <tbody><tr>
        <th>Name</th>
        <th>BestBid</th> 
        <th>BestAsk</th>
        <th>OpenBid</th>
        <th>OpenAsk</th>
        <th>LastChangeAsk</th>
        <th>LastChangeBid</th>
        <th>Midprice</th>
      </tr>
      <tr>
        <td>gbpaud</td>
        <td>1.8899720617188756</td> 
        <td>1.9550019816411313</td> 
        <td>1.8885006037024021</td> 
        <td>1.932899396297598</td> 
        <td>0.06332772101079831</td> 
        <td>0.08900450895206324</td>
        <td><span id=\\"gbpaud\\"></span></td>
      </tr>
    </tbody></table>"
`;

exports[`TableView Sorted the given data by lastChangeBid 1`] = `
"<table>
      <tbody><tr>
        <th>Name</th>
        <th>BestBid</th> 
        <th>BestAsk</th>
        <th>OpenBid</th>
        <th>OpenAsk</th>
        <th>LastChangeAsk</th>
        <th>LastChangeBid</th>
        <th>Midprice</th>
      </tr>
      <tr>
        <td>usdeur</td>
        <td>106.7297012204255</td> 
        <td>107.25199883791178</td> 
        <td>107.22827132623534</td> 
        <td>109.78172867376465</td> 
        <td>-4.862314256927661</td> 
        <td>-10</td>
        <td><span id=\\"usdeur\\"></span></td>
      </tr><tr>
        <td>euraud</td>
        <td>106.7297012204255</td> 
        <td>107.25199883791178</td> 
        <td>107.22827132623534</td> 
        <td>109.78172867376465</td> 
        <td>-4.862314256927661</td> 
        <td>1</td>
        <td><span id=\\"euraud\\"></span></td>
      </tr><tr>
        <td>usdjpy</td>
        <td>106.7297012204255</td> 
        <td>107.25199883791178</td> 
        <td>107.22827132623534</td> 
        <td>109.78172867376465</td> 
        <td>-4.862314256927661</td> 
        <td>2</td>
        <td><span id=\\"usdjpy\\"></span></td>
      </tr>
    </tbody></table>"
`;
